; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/extr_initio.c_initio_select_atn.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/extr_initio.c_initio_select_atn.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.initio_host = type { i64, %struct.scsi_ctrl_blk*, i32*, i32* }
%struct.scsi_ctrl_blk = type { i32, i64, i32*, i64, i32, i32 }

@SCB_SELECT = common dso_local global i32 0, align 4
@TUL_SFifo = common dso_local global i64 0, align 8
@TSC_SEL_ATN = common dso_local global i32 0, align 4
@TUL_SCmd = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.initio_host*, %struct.scsi_ctrl_blk*)* @initio_select_atn to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @initio_select_atn(%struct.initio_host* %0, %struct.scsi_ctrl_blk* %1) #0 {
  %3 = alloca %struct.initio_host*, align 8
  %4 = alloca %struct.scsi_ctrl_blk*, align 8
  %5 = alloca i32, align 4
  store %struct.initio_host* %0, %struct.initio_host** %3, align 8
  store %struct.scsi_ctrl_blk* %1, %struct.scsi_ctrl_blk** %4, align 8
  %6 = load i32, i32* @SCB_SELECT, align 4
  %7 = load %struct.scsi_ctrl_blk*, %struct.scsi_ctrl_blk** %4, align 8
  %8 = getelementptr inbounds %struct.scsi_ctrl_blk, %struct.scsi_ctrl_blk* %7, i32 0, i32 5
  %9 = load i32, i32* %8, align 4
  %10 = or i32 %9, %6
  store i32 %10, i32* %8, align 4
  %11 = load %struct.scsi_ctrl_blk*, %struct.scsi_ctrl_blk** %4, align 8
  %12 = getelementptr inbounds %struct.scsi_ctrl_blk, %struct.scsi_ctrl_blk* %11, i32 0, i32 0
  store i32 2, i32* %12, align 8
  %13 = load %struct.scsi_ctrl_blk*, %struct.scsi_ctrl_blk** %4, align 8
  %14 = getelementptr inbounds %struct.scsi_ctrl_blk, %struct.scsi_ctrl_blk* %13, i32 0, i32 4
  %15 = load i32, i32* %14, align 8
  %16 = load %struct.initio_host*, %struct.initio_host** %3, align 8
  %17 = getelementptr inbounds %struct.initio_host, %struct.initio_host* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = load i64, i64* @TUL_SFifo, align 8
  %20 = add nsw i64 %18, %19
  %21 = call i32 @outb(i32 %15, i64 %20)
  store i32 0, i32* %5, align 4
  br label %22

22:                                               ; preds = %43, %2
  %23 = load i32, i32* %5, align 4
  %24 = load %struct.scsi_ctrl_blk*, %struct.scsi_ctrl_blk** %4, align 8
  %25 = getelementptr inbounds %struct.scsi_ctrl_blk, %struct.scsi_ctrl_blk* %24, i32 0, i32 3
  %26 = load i64, i64* %25, align 8
  %27 = trunc i64 %26 to i32
  %28 = icmp slt i32 %23, %27
  br i1 %28, label %29, label %46

29:                                               ; preds = %22
  %30 = load %struct.scsi_ctrl_blk*, %struct.scsi_ctrl_blk** %4, align 8
  %31 = getelementptr inbounds %struct.scsi_ctrl_blk, %struct.scsi_ctrl_blk* %30, i32 0, i32 2
  %32 = load i32*, i32** %31, align 8
  %33 = load i32, i32* %5, align 4
  %34 = sext i32 %33 to i64
  %35 = getelementptr inbounds i32, i32* %32, i64 %34
  %36 = load i32, i32* %35, align 4
  %37 = load %struct.initio_host*, %struct.initio_host** %3, align 8
  %38 = getelementptr inbounds %struct.initio_host, %struct.initio_host* %37, i32 0, i32 0
  %39 = load i64, i64* %38, align 8
  %40 = load i64, i64* @TUL_SFifo, align 8
  %41 = add nsw i64 %39, %40
  %42 = call i32 @outb(i32 %36, i64 %41)
  br label %43

43:                                               ; preds = %29
  %44 = load i32, i32* %5, align 4
  %45 = add nsw i32 %44, 1
  store i32 %45, i32* %5, align 4
  br label %22

46:                                               ; preds = %22
  %47 = load %struct.initio_host*, %struct.initio_host** %3, align 8
  %48 = getelementptr inbounds %struct.initio_host, %struct.initio_host* %47, i32 0, i32 2
  %49 = load i32*, i32** %48, align 8
  %50 = load %struct.scsi_ctrl_blk*, %struct.scsi_ctrl_blk** %4, align 8
  %51 = getelementptr inbounds %struct.scsi_ctrl_blk, %struct.scsi_ctrl_blk* %50, i32 0, i32 1
  %52 = load i64, i64* %51, align 8
  %53 = getelementptr inbounds i32, i32* %49, i64 %52
  %54 = load %struct.initio_host*, %struct.initio_host** %3, align 8
  %55 = getelementptr inbounds %struct.initio_host, %struct.initio_host* %54, i32 0, i32 3
  store i32* %53, i32** %55, align 8
  %56 = load %struct.scsi_ctrl_blk*, %struct.scsi_ctrl_blk** %4, align 8
  %57 = load %struct.initio_host*, %struct.initio_host** %3, align 8
  %58 = getelementptr inbounds %struct.initio_host, %struct.initio_host* %57, i32 0, i32 1
  store %struct.scsi_ctrl_blk* %56, %struct.scsi_ctrl_blk** %58, align 8
  %59 = load i32, i32* @TSC_SEL_ATN, align 4
  %60 = load %struct.initio_host*, %struct.initio_host** %3, align 8
  %61 = getelementptr inbounds %struct.initio_host, %struct.initio_host* %60, i32 0, i32 0
  %62 = load i64, i64* %61, align 8
  %63 = load i64, i64* @TUL_SCmd, align 8
  %64 = add nsw i64 %62, %63
  %65 = call i32 @outb(i32 %59, i64 %64)
  ret void
}

declare dso_local i32 @outb(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
